--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,6 +30,7 @@
 									<li><%= link_to "Trades I'm In", math_trades_path(filter: "participating") %></li>
 									<li><%= link_to "Trades I'm Running", math_trades_path(filter: "running") %></li>
 									<li><%= link_to "All Trades", math_trades_path %></li>
+									<li class="divider"><%= link_to "Create a New Trade", new_math_trade_path %></li>
 				        </ul>
 				      </li>
 			      <% end %>
