--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -83,11 +83,23 @@
 		</div>
 		<footer>
 			Built by <a href="http://www.boardgamegeek.com/user/acceptableice">AcceptableIce</a> 
-			(<a href="http://www.twitter.com/acceptableice">Twitter</a>)
+			(<a href="http://www.twitter.com/acceptableice">Twitter</a>).
 			<div class="footer-links">
 				<span class="footer-link">
 					<a href="/about">About</a>
 				</span>
+				<span class="footer-link">
+					<a href="https://boardgamegeek.com/geekgold/transfer/user/AcceptableIce">Tip</a>
+				</span>						
+				<span class="footer-link">
+					<a href="http://github.com/acceptableice/acceptable-trader">Contribute</a>
+				</span>
+				<span class="footer-link">
+					<a href="http://github.com/acceptableice/acceptable-trader/issues/new">Log an Issue</a>
+				</span>
+			</div>
+			<div class="footer-disclaimer">
+				Game and some user data from <a href="http://www.boardgamegeek.com/">BoardGameGeek</a>.
 			</div>
 		</footer>
 		<%= javascript_include_tag "application", 'data-turbolinks-track' => true %>
