prospective linked items fix

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -82,20 +82,20 @@
 			</div>
 		</div>
 		<footer>
-			Built by <a href="http://www.boardgamegeek.com/user/acceptableice">AcceptableIce</a> 
-			(<a href="http://www.twitter.com/acceptableice">Twitter</a>).
+			Built by <a href="http://www.boardgamegeek.com/user/Corvimae">Corvimae</a> 
+			(<a href="http://www.twitter.com/Corvimae">Twitter</a>).
 			<div class="footer-links">
 				<span class="footer-link">
 					<a href="/about">About</a>
 				</span>
 				<span class="footer-link">
-					<a href="https://boardgamegeek.com/geekgold/transfer/user/AcceptableIce">Tip</a>
+					<a href="https://boardgamegeek.com/geekgold/transfer/user/Corvimae">Tip</a>
 				</span>						
 				<span class="footer-link">
-					<a href="http://github.com/acceptableice/acceptable-trader">Contribute</a>
+					<a href="http://github.com/Corvimae/acceptable-trader">Contribute</a>
 				</span>
 				<span class="footer-link">
-					<a href="http://github.com/acceptableice/acceptable-trader/issues/new">Log an Issue</a>
+					<a href="http://github.com/Corvimae/acceptable-trader/issues/new">Log an Issue</a>
 				</span>
 			</div>
 			<div class="footer-disclaimer">
