--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -2,11 +2,10 @@
 	<div class="row center-row">
 		<h1>About Acceptable Trader</h1>
 		<p>
-			Acceptable Trader is developed by <a href="http://www.boardgamegeek.com/user/acceptableice">Acceptable Ice</a>. <br>
-			- Twitter: <a href="http://www.twitter.com/acceptableice">@AcceptableIce</a><br>
-			- Website: <a href="http://www.acceptableice.com/">http://www.acceptableice.com/</a><br>
-			<a href="https://boardgamegeek.com/geekgold/transfer/user/AcceptableIce">GeekGold Tip Jar</a><br><br>
-			Acceptable Trader is open source! Visit our <a href="http://www.github.com/acceptableice/acceptable-trader">GitHub</a>.
+			Acceptable Trader is developed by <a href="http://www.boardgamegeek.com/user/corvimae">Corvimae</a>. <br>
+			- Twitter: <a href="http://www.twitter.com/Corvimae">@Corvimae</a><br>
+			<a href="https://boardgamegeek.com/geekgold/transfer/user/corvimae">GeekGold Tip Jar</a><br><br>
+			Acceptable Trader is open source! Visit our <a href="http://www.github.com/corvimae/acceptable-trader">GitHub</a>.
 		</p>
 		<h4>Technology</h4>
 		<p>
